--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Software Engineer</title>
+    <title>AbdulAljawaab</title>
     <style>
         * {
             margin: 0;
@@ -222,15 +222,11 @@
             box-shadow: 0 10px 30px rgba(0,0,0,0.15);
         }
 
-        .project-image {
+        .project-image img {
             width: 100%;
-            height: 200px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 3rem;
-            color: white;
+            height: 100%;
+            object-fit: cover;
+            display: block;
         }
 
         .project-content {
@@ -447,18 +443,20 @@
             <div class="projects-grid">
                 <!-- Project 1 -->
                 <div class="project-card">
-                    <div class="project-image">🛒</div>
+                    <div class="project-image">
+                        <img src="./images/fundiart.png" alt="Fundi-Art Store Screenshot">
+                    </div>
                     <div class="project-content">
                         <h3>Fundi-Art Store</h3>
-                        <p>A simple online store for quality homemade.</p>
+                        <p>A simple online store for quality homemade Products.</p>
                         <div class="project-tech">
                             <span class="tech-badge">HTML</span>
                             <span class="tech-badge">CSS</span>
                             <span class="tech-badge">JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">View Demo →</a>
-                            <a href="#" class="project-link">GitHub →</a>
+                            <a href="https://fundi-website.vercel.app" class="project-link">View Demo →</a>
+                            <a href="https://github.com/Aljawaab/fundi_website.git" class="project-link">GitHub →</a>
                         </div>
                     </div>
                 </div>
