--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./images/fundiart.png" alt="Fundi-Art Store Screenshot">
+                        <img src="./images/fundart.png" alt="Fundi-Art Store Screenshot">
                     </div>
                     <div class="project-content">
                         <h3>Fundi-Art Store</h3>
@@ -463,45 +463,51 @@
 
                 <!-- Project 2 -->
                 <div class="project-card">
-                    <div class="project-image">📝</div>
+                    <div class="project-image">
+                        <img src="./images/moringapath.png" alt="MoringabPathway Store Screenshot">
+                    </div>
                     <div class="project-content">
-                        <h3>Task Manager App</h3>
-                        <p>A to-do list application with CRUD operations, local storage persistence, and priority levels for organizing daily tasks.</p>
+                        <h3>Moringa Pathway</h3>
+                        <p>A centralized platform that allow graduants to easily seek jobs and get essential resources for job seeking.</p>
                         <div class="project-tech">
                             <span class="tech-badge">React</span>
-                            <span class="tech-badge">CSS</span>
-                            <span class="tech-badge">Local Storage</span>
+                            <span class="tech-badge">Flask</span>
+                            <span class="tech-badge">Python</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">View Demo →</a>
-                            <a href="#" class="project-link">GitHub →</a>
+                            <a href="https://moringapathway-29mf.vercel.app/" class="project-link">View Demo →</a>
+                            <a href="https://github.com/DestinyG-beep/moringapathway.git" class="project-link">GitHub →</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 3 -->
                 <div class="project-card">
-                    <div class="project-image">🌤️</div>
+                    <div class="project-image">
+                        <img src="./images/bikerental.png" alt="bike rental picture">
+                    </div>
                     <div class="project-content">
-                        <h3>Weather Dashboard</h3>
-                        <p>A weather application that fetches real-time data from an API and displays current conditions and forecasts for any city worldwide.</p>
+                        <h3>Bike Rental</h3>
+                        <p>A web app I used mostly on AI to assist me during production that allows users to browse available bikes.</p>
                         <div class="project-tech">
                             <span class="tech-badge">JavaScript</span>
                             <span class="tech-badge">REST API</span>
                             <span class="tech-badge">CSS</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">View Demo →</a>
-                            <a href="#" class="project-link">GitHub →</a>
+                            <a href="https://pedalpal-rentals.vercel.app" class="project-link">View Demo →</a>
+                            <a href="https://github.com/Aljawaab/Bike_Rental_App.git" class="project-link">GitHub →</a>
                         </div>
                     </div>
                 </div>
 
-                <!-- Project 4 -->
+                <!-- Project 4 
                 <div class="project-card">
-                    <div class="project-image">📚</div>
+                    <div class="project-image">
+                        <img src="./images/attend.png" alt="class attendance image">
+                    </div>
                     <div class="project-content">
-                        <h3>Personal Blog</h3>
+                        <h3>Class Attendance</h3>
                         <p>A responsive blog website with multiple pages, article listings, and a clean reading experience. Final project for HTML/CSS module.</p>
                         <div class="project-tech">
                             <span class="tech-badge">HTML5</span>
@@ -509,13 +515,13 @@
                             <span class="tech-badge">Responsive</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">View Demo →</a>
-                            <a href="#" class="project-link">GitHub →</a>
+                            <a href="https://class-register.vercel.app" class="project-link">View Demo →</a>
+                            <a href="https://github.com/Aljawaab/class-register.git" class="project-link">GitHub →</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <!-- Project 5 -->
+                <!-- Project 5 
                 <div class="project-card">
                     <div class="project-image">🎮</div>
                     <div class="project-content">
@@ -531,9 +537,9 @@
                             <a href="#" class="project-link">GitHub →</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <!-- Project 6 -->
+                <!-- Project 6 
                 <div class="project-card">
                     <div class="project-image">💼</div>
                     <div class="project-content">
@@ -549,7 +555,7 @@
                             <a href="#" class="project-link">GitHub →</a>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
@@ -561,18 +567,18 @@
             <div class="contact-content">
                 <p>I'm currently looking for opportunities to gain experience and contribute to exciting projects. Feel free to reach out if you'd like to connect!</p>
                 <div class="contact-links">
-                    <a href="mailto:johndoe@example.com" class="contact-item">
+                    <a href="abdulkhamis4041@gmail.com" class="contact-item">
                         <span>📧</span>
-                        <span>johndoe@example.com</span>
+                        <span>abdulkhamis4041@gmail.com</span>
                     </a>
-                    <a href="https://github.com/johndoe" class="contact-item" target="_blank">
+                    <a href="https://github.com/Aljawaab" class="contact-item" target="_blank">
                         <span>💻</span>
                         <span>GitHub</span>
                     </a>
-                    <a href="https://linkedin.com/in/johndoe" class="contact-item" target="_blank">
+                    <!-- <a href="https://linkedin.com/in/johndoe" class="contact-item" target="_blank">
                         <span>💼</span>
                         <span>LinkedIn</span>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </div>
@@ -580,7 +586,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 John Doe. Built with passion and dedication.</p>
+        <p>&copy; 2025 Abdul Aljawaab.</p>
     </footer>
 
     <script>
