--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Moringa Pathway</h3>
-                        <p>A centralized platform that allow graduants to easily seek jobs and get essential resources for job seeking.</p>
+                        <p>A centralized platform that allow graduants to easily seek jobs and get essential resources for job seeking (I did the BE).</p>
                         <div class="project-tech">
                             <span class="tech-badge">React</span>
                             <span class="tech-badge">Flask</span>
@@ -492,7 +492,7 @@
                         <div class="project-tech">
                             <span class="tech-badge">JavaScript</span>
                             <span class="tech-badge">REST API</span>
-                            <span class="tech-badge">CSS</span>
+                            <span class="tech-badge">React</span>
                         </div>
                         <div class="project-links">
                             <a href="https://pedalpal-rentals.vercel.app" class="project-link">View Demo →</a>
@@ -501,17 +501,17 @@
                     </div>
                 </div>
 
-                <!-- Project 4 
+                <!-- Project 4 -->
                 <div class="project-card">
                     <div class="project-image">
                         <img src="./images/attend.png" alt="class attendance image">
                     </div>
                     <div class="project-content">
                         <h3>Class Attendance</h3>
-                        <p>A responsive blog website with multiple pages, article listings, and a clean reading experience. Final project for HTML/CSS module.</p>
+                        <p>A responsive website for tracking students attendance and a clean reading experience.</p>
                         <div class="project-tech">
-                            <span class="tech-badge">HTML5</span>
-                            <span class="tech-badge">CSS3</span>
+                            <span class="tech-badge">React</span>
+                            <span class="tech-badge">CSS</span>
                             <span class="tech-badge">Responsive</span>
                         </div>
                         <div class="project-links">
@@ -519,7 +519,7 @@
                             <a href="https://github.com/Aljawaab/class-register.git" class="project-link">GitHub →</a>
                         </div>
                     </div>
-                </div> -->
+                </div> 
 
                 <!-- Project 5 
                 <div class="project-card">
@@ -567,7 +567,7 @@
             <div class="contact-content">
                 <p>I'm currently looking for opportunities to gain experience and contribute to exciting projects. Feel free to reach out if you'd like to connect!</p>
                 <div class="contact-links">
-                    <a href="abdulkhamis4041@gmail.com" class="contact-item">
+                    <a href="mailto:abdulkhamis4041@gmail.com" class="contact-item">
                         <span>📧</span>
                         <span>abdulkhamis4041@gmail.com</span>
                     </a>
