--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Fundi-Art Store</h3>
-                        <p>A simple online store for quality homemade Products.</p>
+                        <p>A simple online store for quality handmade Products.</p>
                         <div class="project-tech">
                             <span class="tech-badge">HTML</span>
                             <span class="tech-badge">CSS</span>
@@ -488,7 +488,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Bike Rental</h3>
-                        <p>A web app I used mostly on AI to assist me during production that allows users to browse available bikes.</p>
+                        <p>A web app that I used mostly AI to assist me during development it allows users to browse for available bikes and rent them.</p>
                         <div class="project-tech">
                             <span class="tech-badge">JavaScript</span>
                             <span class="tech-badge">REST API</span>
@@ -508,7 +508,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Class Attendance</h3>
-                        <p>A responsive website for tracking students attendance and a clean reading experience.</p>
+                        <p>A responsive website for tracking students attendance for a clean reading experience.</p>
                         <div class="project-tech">
                             <span class="tech-badge">React</span>
                             <span class="tech-badge">CSS</span>
@@ -565,20 +565,21 @@
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
             <div class="contact-content">
-                <p>I'm currently looking for opportunities to gain experience and contribute to exciting projects. Feel free to reach out if you'd like to connect!</p>
+                <p>I'm currently looking for opportunities to gain experience, learn and contribute to exciting projects. Feel free to reach out if you'd like to connect!</p>
                 <div class="contact-links">
-                    <a href="mailto:abdulkhamis4041@gmail.com" class="contact-item">
-                        <span>📧</span>
+                    <a href="mailto:abd@gmail.com" class="contact-item">
+                        <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none">
+                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+                            <polyline points="22,6 12,13 2,6"></polyline>
+                        </svg>
                         <span>abdulkhamis4041@gmail.com</span>
                     </a>
                     <a href="https://github.com/Aljawaab" class="contact-item" target="_blank">
-                        <span>💻</span>
+                        <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none">
+                            <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+                        </svg>
                         <span>GitHub</span>
                     </a>
-                    <!-- <a href="https://linkedin.com/in/johndoe" class="contact-item" target="_blank">
-                        <span>💼</span>
-                        <span>LinkedIn</span>
-                    </a> -->
                 </div>
             </div>
         </div>
